added inline elements and some caveats around embedded media

--- a/style-guide.html
+++ b/style-guide.html
@@ -36,6 +36,10 @@
     suscipit, dolor nunc sodales est, quis cursus dui elit vel nisl.
   </p>
 
+  <h2>Inline elements</h2>
+
+  <p>Some of these are deprecated but still good to reference in case they pop up in your website.</p>
+
   <p>
     Normal, <abbr title="Abbreviations">abbr</abbr>, <del>del</del>,
     <dfn>dfn</dfn>, <em>em</em>, <ins>ins</ins>, <mark>mark</mark>,
@@ -55,7 +59,7 @@
   <p>This is a link <a href="https://google.com">to an external website</a>.</p>
   <p>Here we have a <a href=".">visited link</a>.</p>
   <p>
-    If we click <a href="#">this guy</a>, we'll jump to the top of the page.
+    If we click <a href="#">this thing</a>, we'll jump to the top of the page.
   </p>
 
   <p>
@@ -265,15 +269,17 @@
 
   <h3>Audio</h3>
 
+  <p>This won't work until we reference an audio file.</p>
   <div>
     <!-- Simple audio playback -->
-    <audio src="resources/audio/bensound-happyrock.mp3" controls>
+    <audio src="" controls>
       Your browser does not support the
       <code>audio</code> element.
     </audio>
   </div>
 
   <h3>Video (no controls - for background)</h3>
+
   <video autoplay loop>
     <source
       src="resources/video/Cloud_Surf.mp4"
@@ -292,6 +298,8 @@
   </video>
 
   <h3>Video with controls</h3>
+
+  <p>These won't work until we reference some video files.</p>
 
   <video controls>
     <source
