added place names for headings context

--- a/style-guide.html
+++ b/style-guide.html
@@ -317,4 +317,38 @@
     Your browser does not support the video tag. I suggest you upgrade your
     browser.
   </video>
+
+  <h2>Some headings in context</h2>
+
+  <h1>My Favourite Places in Europe</h1>
+
+<p>Europe is a big place!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h2>France</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h3>Paris</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h3>Marseille</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h2>Italy</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h3>Rome</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h3>Venice</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h2>Spain</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h3>Madrid</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+<h3>Barcelona</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 </section>
