--- a/style-guide.html
+++ b/style-guide.html
@@ -38,7 +38,10 @@
 
   <h2>Inline elements</h2>
 
-  <p>Some of these are deprecated but still good to reference in case they pop up in your website.</p>
+  <p>
+    Some of these are deprecated but still good to reference in case they pop up
+    in your website.
+  </p>
 
   <p>
     Normal, <abbr title="Abbreviations">abbr</abbr>, <del>del</del>,
@@ -253,17 +256,20 @@
 
   <h3>Google map iframe</h3>
 
-
-
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.2977690755806!2d144.98747991573606!3d-37.80649377975363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6430ac6065bff%3A0x9c5bae73367aadf4!2sCollarts%20-%20Cromwell%20St%20Campus!5e0!3m2!1sen!2sau!4v1582194038555!5m2!1sen!2sau" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
-
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.2977690755806!2d144.98747991573606!3d-37.80649377975363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6430ac6065bff%3A0x9c5bae73367aadf4!2sCollarts%20-%20Cromwell%20St%20Campus!5e0!3m2!1sen!2sau!4v1582194038555!5m2!1sen!2sau"
+    width="600"
+    height="450"
+    frameborder="0"
+    style="border:0;"
+    allowfullscreen=""
+  ></iframe>
 
   <h3>YouTube iframe</h3>
   <!-- <iframe width="560" height="315" src="//www.youtube.com/embed/M_8iD5xS1hI?rel=0" frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe> -->
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/WFkIKd6md6g?start=206" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    height="315"
 
   <h2>Media</h2>
 
@@ -322,33 +328,33 @@
 
   <h1>My Favourite Places in Europe</h1>
 
-<p>Europe is a big place!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <p>Europe is a big place!</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h2>France</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h2>France</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h3>Paris</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Paris</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h3>Marseille</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Marseille</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h2>Italy</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h2>Italy</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h3>Rome</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Rome</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h3>Venice</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Venice</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h2>Spain</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h2>Spain</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h3>Madrid</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Madrid</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<h3>Barcelona</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h3>Barcelona</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 </section>
