--- a/style-guide.html
+++ b/style-guide.html
@@ -269,7 +269,14 @@
   <!-- <iframe width="560" height="315" src="//www.youtube.com/embed/M_8iD5xS1hI?rel=0" frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe> -->
 
+  <iframe
+    width="560"
     height="315"
+    src="https://www.youtube.com/embed/WFkIKd6md6g?start=206"
+    frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+  ></iframe>
 
   <h2>Media</h2>
 
