--- a/style-guide.html
+++ b/style-guide.html
@@ -14,8 +14,7 @@
 <h5>Heading level 5 (h5)</h5>
 <p>This is some content.</p>
 <h2>Paragraphs</h2>
-<p>
-  Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipiscing elit. In
+<p>Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipiscing elit. In
   id risus quis purus mollis lobortis vel ac tellus. Nam pharetra lorem quis
   dui commodo dapibus. Curabitur aliquet sapien vitae ligula pretium
   sollicitudin. Sed sed magna eu risus placerat gravida non sit amet augue.
@@ -24,16 +23,13 @@
   volutpat. In vel diam nulla. Praesent faucibus augue quis dui vehicula, a
   consequat est fringilla. Sed nec nisi fermentum, maximus nunc ac, hendrerit
   lorem. Proin mollis metus in erat dictum egestas. Proin nec ipsum viverra,
-  scelerisque nisi in, faucibus nulla.
-</p>
-<p>
-  Aliquam erat volutpat. Donec sagittis libero ac justo suscipit laoreet.
+  scelerisque nisi in, faucibus nulla.</p>
+<p>Aliquam erat volutpat. Donec sagittis libero ac justo suscipit laoreet.
   Suspendisse ut sem vel augue vulputate sodales blandit sit amet metus.
   Quisque porta consectetur efficitur. Duis venenatis nisl in mollis
   convallis. Pellentesque quis accumsan orci. Nulla porta arcu quis laoreet
   sagittis. Aliquam erat volutpat. Suspendisse sagittis, turpis vel posuere
-  suscipit, dolor nunc sodales est, quis cursus dui elit vel nisl.
-</p>
+  suscipit, dolor nunc sodales est, quis cursus dui elit vel nisl.</p>
 
 <h2>Inline elements</h2>
 
@@ -62,19 +58,13 @@
   If we click <a href="#">this thing</a>, we'll jump to the top of the page.
 </p>
 
-<p>
-  This paragraph contains a link to an
-  <a href="mailto:sam@meeum.com">email address</a>.
-</p>
-<p>
-  Here's a link to a
-  <a href="tel:12345678">phoney phone number.</a>
-</p>
+<p>This paragraph contains a link to an <a href="mailto:sam@meeum.com">email address</a>.</p>
+
+<p>Here's a link to a <a href="tel:12345678">phoney phone number.</a></p>
+
 <p>Does the <a href="sms:0413889846">sms protocol</a> actually work?</p>
-<p>
-  And finally, a <a href="callto:sam_hemphill">Skype link</a> that has
-  questionable support.
-</p>
+
+<p>And finally, a <a href="callto:sam_hemphill">Skype link</a> that has questionable support.</p>
 
 <h2>Lists</h2>
 <h4>Unordered list</h4>
