--- a/style-guide.html
+++ b/style-guide.html
@@ -58,13 +58,11 @@
   If we click <a href="#">this thing</a>, we'll jump to the top of the page.
 </p>
 
-<p>This paragraph contains a link to an <a href="mailto:sam@meeum.com">email address</a>.</p>
+<p>This paragraph contains a link to an <a href="mailto:shemphill@collarts.edu.au">email address</a>.</p>
 
 <p>Here's a link to a <a href="tel:12345678">phoney phone number.</a></p>
 
 <p>Does the <a href="sms:0413889846">sms protocol</a> actually work?</p>
-
-<p>And finally, a <a href="callto:sam_hemphill">Skype link</a> that has questionable support.</p>
 
 <h2>Lists</h2>
 <h4>Unordered list</h4>
@@ -223,13 +221,17 @@
 
 <h3>Images</h3>
 
+<h4>Image with wrong reference</h4>
+
+<img src="wrongURL.jpg" alt="at least we have the alt text sorted">
+
 <h4>Normal sized image</h4>
 
-<img src="//placekitten.com/480/480" alt="Image alt text" />
+<img src="https://placekitten.com/480/480" alt="Image alt text" />
 
 <h4>Wiiiiiide image</h4>
 
-<img src="//placekitten.com/2000/600" alt="Image alt text" />
+<img src="https://placekitten.com/2000/600" alt="Image alt text" />
 
 <h2 class="">Embedded iFrames</h2>
 
@@ -240,8 +242,7 @@
   width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
 <h3>YouTube iframe</h3>
-<!-- <iframe width="560" height="315" src="//www.youtube.com/embed/M_8iD5xS1hI?rel=0" frameborder="0" allow="autoplay; encrypted-media"
-      allowfullscreen></iframe> -->
+
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/WFkIKd6md6g?start=206" frameborder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
