--- a/style-guide.html
+++ b/style-guide.html
@@ -54,9 +54,7 @@
 </p>
 <p>This is a link <a href="https://google.com">to an external website</a>.</p>
 <p>Here we have a <a href=".">visited link</a>.</p>
-<p>
-  If we click <a href="#">this thing</a>, we'll jump to the top of the page.
-</p>
+<p>If we click <a href="#">this thing</a>, we'll jump to the top of the page.</p>
 
 <p>This paragraph contains a link to an <a href="mailto:shemphill@collarts.edu.au">email address</a>.</p>
 
